--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,15 +14,18 @@ http {
 
         server {
               listen 80;
-              server_name  0.0.0.0;
+              server_name 54.252.150.46;
 
-              location /cafe {
+              location / {
                 proxy_pass http://web;
+                proxy_http_version 1.1;
                 proxy_redirect     off;
                 proxy_set_header   Host $host;
                 proxy_set_header   X-Real-IP $remote_addr;
                 proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header   X-Forwarded-Host $server_name;
+                proxy_set_header    Upgrade $http_upgrade;
+                proxy_set_header    Connection "upgrade";
               }
 
               location /static/ {
