--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "80:80"
     volumes:
-        - /static:/static
+        - static:/static
   web:
     restart: always
     build: ./web/
@@ -17,16 +17,17 @@ services:
         - nginx
     volumes:
       - /home/ubuntu/web:/usr/src/web
-      - /static:/static
+      - static:/static
     env_file:
       - ./docker/env_web
   cms-db:
     image: postgres
     restart: always
     volumes:
-       - dbdata
+       - dbdata:/var/lib/postgresql/data
     env_file:
        - ./docker/env_db
 volumes:
   dbdata:
+  static:
 
